/*
 * This file was generated by the Gradle 'init' task.
 */
plugins {
    id 'java'
    id 'eclipse'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

// The build has to run on Java 21: Error Prone and connector-common break on 23,
// and without a toolchain that is a confusing compile error instead of a clear one.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

bootJar {
    mainClass = 'org.apache.fineract.ServerApplication'
    enabled = true
    archiveClassifier = '' // so bootJar replaces the default jar
}

springBoot {
    mainClass = 'org.apache.fineract.ServerApplication'
}

// this is a deployable application, the fat jar is the only artifact
jar {
    enabled = false
}

configurations.all {
    // camel-xml-jaxb (via connector-common) pulls the com.sun.xml.bind
    // re-publication of the JAXB runtime; the same classes already arrive via
    // the canonical org.glassfish.jaxb coordinates, and bootJar rejects the
    // duplicate jaxb-core jar entry. Same fix as identity-account-mapper.
    exclude group: 'com.sun.xml.bind', module: 'jaxb-core'
    exclude group: 'com.sun.xml.bind', module: 'jaxb-impl'
}

repositories {
    mavenCentral()
    maven { url = uri('https://repository.jboss.org/nexus/content/repositories/releases') }
    maven { url = uri('https://mifos.jfrog.io/artifactory/phee-gradle-local') }
    maven { url = uri('https://mifos.jfrog.io/artifactory/mifosx-gradle-local') }
}

dependencies {
    // Mifos Platform BOM pins Spring Boot 3.4, Jakarta EE 10, EclipseLink 4,
    // Flyway 10 and every other shared library version. Do NOT hardcode
    // managed versions. This is a deployable application (leaf node), so use
    // enforcedPlatform().
    implementation enforcedPlatform('org.mifos:paymenthub-ee-bom:2.0.0-SNAPSHOT')

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // Spring Security 6 line. The old Spring Security OAuth2 stack
    // (spring-security-oauth2 2.4.1 + spring-security-jwt) was discontinued and
    // does not exist for Spring Boot 3: the resource-server side moved to
    // spring-boot-starter-oauth2-resource-server (Nimbus JOSE), the /oauth/token
    // endpoint is re-implemented in TokenController.
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.json:json'
    implementation 'org.eclipse.persistence:org.eclipse.persistence.jpa'
    annotationProcessor 'org.hibernate.orm:hibernate-jpamodelgen'
    implementation 'jakarta.persistence:jakarta.persistence-api'
    // TODO move these five to the BOM. They are carried over from the pre-migration
    // build.gradle and are the only versions still written by hand here, so the "do
    // not hardcode managed versions" rule above does not hold for them yet. Two are
    // worth attention when it happens: commons-io 2.4 is from 2013 and carries
    // CVE-2021-29425.
    implementation 'joda-time:joda-time:2.10.6'
    implementation 'org.apache.commons:commons-lang3'
    implementation 'com.zaxxer:HikariCP'
    implementation 'com.mysql:mysql-connector-j'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'
    // Ehcache 2 (net.sf.ehcache) removed: Spring 6 dropped EhCacheCacheManager.
    // Caffeine provides the same TTL/max-size semantics (see CacheConfig).
    implementation 'com.github.ben-manes.caffeine:caffeine'
    // JUnit 5 for the tests added with this migration. Versions from the BOM, and
    // only the engine: spring-boot-starter-test would pull mockito, assertj, hamcrest
    // and jsonpath for two tests over pure functions.
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'net.sf.supercsv:super-csv:2.4.0'
    implementation 'com.amazonaws:aws-java-sdk:1.11.486'
    implementation 'com.azure:azure-storage-blob:12.12.0'
    implementation 'commons-io:commons-io:2.4'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui'
    // was org.mifos:ph-ee-connector-common, republished under the new repo
    // structure; same org.mifos.connector.common packages, no import changes
    implementation 'org.mifos:paymenthub-ee-core:2.0.0-SNAPSHOT'
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
}

// is the group correct or should be org.mifos ??
group = 'org.apache.fineract'
version = '2.0.0.mifos-SNAPSHOT'
description = 'paymenthub-ee-bff'

// spring-boot-starter-test brings JUnit 5. Without this Gradle uses the JUnit 4
// runner and silently skips every JUnit 5 test, so the build stays green while
// testing nothing.
tasks.named('test') {
    useJUnitPlatform()
}

sourceSets {
    generated {
        java {
            srcDirs = ['src/generated/java']
        }
    }
}

// No publishing block: this is a deployable leaf application, consumed as a Docker
// image, not as a Maven dependency. It also could not publish even if we wanted to -
// components.java is built around the disabled jar task, and Gradle refuses to
// generate metadata for a component that depends on an enforcedPlatform, because
// forced versions would leak to consumers. A published library would have to use
// platform() instead; see the BOM notes.

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.generatedSourceOutputDirectory = file("src/generated/java")
    options.release = 21
    options.compilerArgs.addAll([
        '-parameters'
    ])
}
